--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 authors = ["Sam Phippen <samphippen@googlemail.com>"]
 
 [dependencies]
-descriptor = { path = "../descriptor" }
+expector = { git = "https://github.com/samphippen/descriptor" }
