--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,5 @@
 name = "expector"
 version = "0.1.0"
 authors = ["Sam Phippen <samphippen@googlemail.com>"]
+license="MIT"
+description="A bad expectations framework"
